added a second page

--- a/demo4.html
+++ b/demo4.html
@@ -14,6 +14,7 @@
       exercitationem eveniet voluptatum suscipit similique ea excepturi totam expedita ad! Sed tempora sapiente rem non
       eos cum. At minima placeat totam.</P>
     <p>git to vsc</p>
+    <a href="/demo4p1.html">to scond page</a>
   </body>
 
 </html>
